--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   terraform:
-    name: Terraform Plan & Apply
+    name: Terraform Plan & Destroy
     runs-on: ubuntu-latest
 
     env:
@@ -41,5 +41,5 @@ jobs:
       - name: Terraform Plan
         run: terraform plan -var="project_id=${GCP_PROJECT}" -var="region=${GCP_REGION}" -var="zone=${GCP_ZONE}"
 
-      - name: Terraform Apply
-        run: terraform apply -auto-approve -var="project_id=${GCP_PROJECT}" -var="region=${GCP_REGION}" -var="zone=${GCP_ZONE}"
+      - name: Terraform Destroy
+        run: terraform destroy -auto-approve -var="project_id=${GCP_PROJECT}" -var="region=${GCP_REGION}" -var="zone=${GCP_ZONE}"
