--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,13 +1,16 @@
-name: Deploy GKE with Terraform
+name: Deploy or Destroy GKE with Terraform
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+    inputs:
+      destroy:
+        description: 'Set to true to destroy the infrastructure'
+        required: false
+        default: 'false'
 
 jobs:
   terraform:
-    name: Terraform Plan & Destroy
+    name: Terraform Plan & Apply/Destroy
     runs-on: ubuntu-latest
 
     env:
@@ -41,5 +44,18 @@ jobs:
       - name: Terraform Plan
         run: terraform plan -var="project_id=${GCP_PROJECT}" -var="region=${GCP_REGION}" -var="zone=${GCP_ZONE}"
 
-      - name: Terraform Destroy
-        run: terraform destroy -auto-approve -var="project_id=${GCP_PROJECT}" -var="region=${GCP_REGION}" -var="zone=${GCP_ZONE}"
+      - name: Terraform Apply or Destroy
+        run: |
+          if [ "${{ github.event.inputs.destroy }}" == "true" ]; then
+            echo "Destroying infrastructure..."
+            terraform destroy -auto-approve \
+              -var="project_id=${GCP_PROJECT}" \
+              -var="region=${GCP_REGION}" \
+              -var="zone=${GCP_ZONE}"
+          else
+            echo "Applying infrastructure..."
+            terraform apply -auto-approve \
+              -var="project_id=${GCP_PROJECT}" \
+              -var="region=${GCP_REGION}" \
+              -var="zone=${GCP_ZONE}"
+          fi
