--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -20,12 +20,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v1
+        with:
+          credentials_json: ${{ env.GOOGLE_CREDENTIALS }}
+
       - name: Setup Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v1
         with:
           project_id: ${{ env.GCP_PROJECT }}
-          service_account_key: ${{ env.GOOGLE_CREDENTIALS }}
-          export_default_credentials: true
 
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v2
